--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <html>
-  <head>
-    <script src="index.js"></script>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <script src="index.js"></script>
+  <title>This is the title of the webpage!</title>
+  <!-- Load React. -->
+  <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+</head>
+
+<body>
+  <script src="index.js"></script>
+</body>
+
 </html>
